terraform/main.tf
resource "aws_security_group" "web_sg" {
  name = "compose-web-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami           = "ami-0df368112825f8d8f"
  instance_type = "t3.micro"

  key_name = "ansible-key"

  security_groups = [
    aws_security_group.web_sg.name
  ]

  tags = {
    Name = "compose-web-server"
  }
}
